--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "node example.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
