--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "carlo": "^0.9.8",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1",
-    "systeminformation": "^3.45.9"
+    "systeminformation": "^3.45.9",
+    "through2": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
