--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "carlos",
-  "version": "0.1.0",
+  "description": "a cross between google's carlo project and create-react-app",
+  "license": "MIT",
+  "repository": "https://github.com/nickbouldien/carlos",
+  "author": "nick bouldien",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
