--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server": "node example.js",
+    "server": "node index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
